--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,8 @@ h3 {
 
 h2 {
   font-family: 'Montserrat', sans-serif;
+  -moz-font-weight: 600;
+  -webkit-font-weight: 600;
   font-weight: 600;
   color: var(--green);
   margin-bottom: 20px;
@@ -56,6 +58,8 @@ h2 {
 
 .h2-orange {
   font-family: 'Montserrat', sans-serif;
+  -moz-font-weight: 600;
+  -webkit-font-weight: 600;
   font-weight: 600;
   color: var(--orange);
 }
@@ -64,11 +68,15 @@ h2 {
   font-family: 'Montserrat', sans-serif;
   color: var(--orange);
   font-size: 4rem;
+  -moz-font-weight: 700;
+  -webkit-font-weight: 700;
   font-weight: 700;
 }
 
 p {
   font-family: var(--font-primary);
+  -moz-font-weight: 400;
+  -webkit-font-weight: 400;
   font-weight: 400;
   line-height: 1.6rem;
 }
@@ -76,6 +84,8 @@ p {
 .p-invert {
   font-family: var(--font-primary);
   color: #fffef2;
+  -moz-font-weight: 400;
+  -webkit-font-weight: 400;
   font-weight: 400;
   line-height: 1.59rem;
 }
@@ -87,6 +97,8 @@ p {
   justify-content: space-between;
   align-items: center;
   font-family: "Montserrat", sans-serif;
+  -moz-font-weight: 600;
+  -webkit-font-weight: 600;
   font-weight: 600;
   background-color: var(--dark-green);
   padding: 20px;
@@ -206,6 +218,8 @@ footer {
 
 .footer-text {
   font-family: var(--font-primary);
+  -moz-font-weight: 500;
+  -webkit-font-weight: 500;
   font-weight: 500;
   font-size: .8rem;
   color: var(--cream);
@@ -221,6 +235,8 @@ footer {
 
 .footer-copyright {
   font-family: var(--font-primary);
+  -moz-font-weight: 500;
+  -webkit-font-weight: 500;
   font-weight: 500;
   font-size: .6rem;
   color: var(--cream);
@@ -285,6 +301,8 @@ footer {
   border-radius: 10px;
   color: var(--off-black);
   font-family: var(--font-primary);
+  -moz-font-weight: 600;
+  -webkit-font-weight: 600;
   font-weight: 600;
   font-size: 1rem;
   padding: .5rem;
@@ -318,6 +336,8 @@ footer {
   border-radius: 10px;
   color: var(--cream);
   font-family: var(--font-primary);
+  -moz-font-weight: 600;
+  -webkit-font-weight: 600;
   font-weight: 600;
   font-size: 1rem;
   padding: .5rem;
@@ -509,6 +529,8 @@ footer {
   color: #333;
   font-size: 0.9rem;
   font-family: var(--font-primary);
+  -moz-font-weight: 600;
+  -webkit-font-weight: 600;
   font-weight: 600;
 }
 
@@ -603,6 +625,8 @@ footer {
   border-radius: 50%;
   color: var(--cream);
   font-family: var(--font-primary);
+  -moz-font-weight: 300;
+  -webkit-font-weight: 300;
   font-weight: 300;
   font-size: 2px;
   background-color: var(--green);
@@ -685,6 +709,8 @@ footer {
 .testimonial-author {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.2rem;
+  -moz-font-weight: bold;
+  -webkit-font-weight: bold;
   font-weight: bold;
   margin-bottom: 10px;
 }
@@ -738,6 +764,8 @@ footer {
 
 .form-container .custom-form label {
   display: block;
+  -moz-font-weight: 500;
+  -webkit-font-weight: 500;
   font-weight: 500;
   font-family: var(--font-primary);
   margin-bottom: 5px;
@@ -863,6 +891,8 @@ footer {
 .contact-form-container .checkbox-section h3 {
   margin-bottom: 10px;
   font-size: 16px;
+  -moz-font-weight:bold;
+  -webkit-font-weight: bold;
   font-weight: bold;
 }
 
@@ -904,6 +934,8 @@ footer {
 .toast p {
   margin: 0;
   font-size: 1rem;
+  -moz-font-weight: 600;
+  -webkit-font-weight: 600;
   font-weight: 600;
 }
 
@@ -1349,6 +1381,8 @@ footer {
 
   .footer-text {
     font-family: var(--font-primary);
+    -moz-font-weight: 500;
+    -webkit-font-weight: 500;
     font-weight: 500;
     font-size: .8rem;
     color: var(--cream);
